components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__run002_all_update_with_multiple_exclusions.snap
---
source: components/nonmem/src/parsing/model.rs
expression: model.model_content()
input_file: components/nonmem/test_data/run_output/run002/run002.mod
---
$PROBLEM Base one-compartment oral absorption model

$INPUT ID TIME EVID AMT CMT DV MDV WT SEX

$DATA /data/user-homes/matthews/Projects/nonmem-reference-scenarios/data/derived/onecmpt-oral-30ind.csv IGNORE=@

$SUBROUTINES ADVAN2 TRANS2

$PK
; Typical values
TVCL = THETA(1)
TVV  = THETA(2)
TVKA = THETA(3)

; Individual parameters
CL = TVCL * EXP(ETA(1))
V  = TVV  * EXP(ETA(2))
KA = TVKA * EXP(ETA(3))

; NONMEM scaling
S2 = V

$ERROR
; Proportional + additive error model (matches mrgsolve)
IPRED = F
Y = IPRED * (1 + EPS(1)) + EPS(2)

$THETA
(0, 1.2468)     ; TVCL (L/hr)
(0, 41.1736)    ; TVV (L)
(0, 1.2599)     ; TVKA (1/hr)

$OMEGA
0.13576     ; ETA(CL)
0.13633     ; ETA(V)
0.111       ; ETA(KA)

$SIGMA
0.032031    ; Proportional error (variance, 20% CV)
0.0064      ; Additive error (variance, 0.01 mg/L SD)


$ESTIMATION METHOD=1 INTERACTION MAXEVAL=9999 PRINT=5
$COV PRINT=E MATRIX = R

$TABLE ID TIME DV PRED IPRED CWRES NPDE NOAPPEND NOPRINT ONEHEADER FILE=run002.tab
$TABLE ID CL V KA ETAS(1:LAST) NOAPPEND NOPRINT ONEHEADER FIRSTONLY FILE=run002par.tab
