components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__type2_error_scenarios@prefix_mismatch.mod-2.snap
---
source: components/nonmem/src/parsing/model.rs
expression: model
input_file: components/nonmem/test_data/comments/type2_errors/prefix_mismatch.mod
---
Model {
    problem: "Prefix mismatch test",
    input_columns: [
        Included(
            "ID",
        ),
        Included(
            "TIME",
        ),
        Included(
            "DV",
        ),
        Included(
            "AMT",
        ),
    ],
    data: Data {
        path: "test.csv",
        ignore: [
            Marker(
                "@",
            ),
        ],
        accept: [],
        num_records: None,
        null_value: None,
    },
    subroutines: [],
    theta_parameters: [
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 1.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "THETA8 CL [L/h]",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "THETA8",
                        ),
                        name: "CL",
                        unit: Some(
                            "L/h",
                        ),
                        parameterization: None,
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 2.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "2 V [L]",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "2",
                        ),
                        name: "V",
                        unit: Some(
                            "L",
                        ),
                        parameterization: None,
                    },
                ),
            ),
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Block {
                size: 2,
            },
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "11 IIV CL ;exp",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: Some(
                                    "11",
                                ),
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "CL",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "11 IIV V ;log",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "11 IIV V ;log",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: Some(
                                    "11",
                                ),
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "V",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 1.0,
                    upper_bound: None,
                    is_fixed: true,
                    comment: Some(
                        "SIGMA1 PropErr",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2ThetaSigma {
                                prefix: Some(
                                    "SIGMA1",
                                ),
                                name: "PropErr",
                                unit: None,
                                parameterization: None,
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    estimations: [],
    tables: [],
    simulation: None,
    covariance: None,
}
