components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__type2_error_scenarios@unresolved_theta_ref.mod-2.snap
---
source: components/nonmem/src/parsing/model.rs
expression: model
input_file: components/nonmem/test_data/comments/type2_errors/unresolved_theta_ref.mod
---
Model {
    problem: "Unresolved theta ref test",
    input_columns: [
        Included(
            "ID",
        ),
        Included(
            "TIME",
        ),
        Included(
            "DV",
        ),
        Included(
            "AMT",
        ),
    ],
    data: Data {
        path: "test.csv",
        ignore: [
            Marker(
                "@",
            ),
        ],
        accept: [],
        num_records: None,
        null_value: None,
    },
    subroutines: [],
    theta_parameters: [
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 1.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "CL [L/h]",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: None,
                        name: "CL",
                        unit: Some(
                            "L/h",
                        ),
                        parameterization: None,
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 2.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "V [L]",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: None,
                        name: "V",
                        unit: Some(
                            "L",
                        ),
                        parameterization: None,
                    },
                ),
            ),
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "IIV NONEXISTENT ;exp",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: None,
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "NONEXISTENT",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 1.0,
                    upper_bound: None,
                    is_fixed: true,
                    comment: Some(
                        "PropErr ;prop",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2ThetaSigma {
                                prefix: None,
                                name: "PropErr",
                                unit: None,
                                parameterization: Some(
                                    Proportional,
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    estimations: [],
    tables: [],
    simulation: None,
    covariance: None,
}
