components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__type2_error_scenarios@unresolved_theta_ref.mod.snap
---
source: components/nonmem/src/parsing/model.rs
expression: errors
input_file: components/nonmem/test_data/comments/type2_errors/unresolved_theta_ref.mod
---
[
    "OMEGA comment 'IIV NONEXISTENT ;exp' references unknown theta(s) [NONEXISTENT], known thetas are [CL, V]",
]
